# four-leaf-yolo

./: .gitignore  .gitmodules  README.md  data.yaml  pyproject.toml
.github/: README.md
data/: classes.txt  notes.json
data/synthetic/gemini/: rename.sh
data/test/labels/: 742bb423-1.txt  7a5b440d-3.txt  IMG_20230628_092654_jpg.rf.c660c7b63d435f0eaf3bd2e54d08837d.txt  fa0ffeca-2.txt
data/train/labels/: 00efd051-1c8043c53e20e54f67dea7222941e29b.txt  2a8ddf2f-0e39bcd964ac6c305aaefac319d47ad9.txt  742bb423-1.txt  7a5b440d-3.txt  c92364f1-3e7954f87f3b627c6ee8097864d60914.txt  fa0ffeca-2.txt
src/: benchmark.py  convert.py  train.py
weights/: download.sh
weights/yolov8n-four-leaf_saved_model/: fingerprint.pb
weights/yolov8n-four-leaf_saved_model/variables/: variables.data-00000-of-00001  variables.index
weights/yolov8n-four-leaf_web_model/: model.json
yolov8-tfjs/: package-lock.json  package.json
yolov8-tfjs/public/yolov8n-four-leaf_web_model/: metadata.yaml
yolov8-tfjs/src/: App.jsx
