[project.scripts]
fly-train = "train:main"
fly-benchmark = "benchmark:main"

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.10"
version = "0.0.1"

name        = "four-leaf-yolo"
description = "Training YOLO to detect four leaf clovers."
readme      = ".github/README.md"
license     = "MIT"

dependencies = [
  "ultralytics",
  "onnx>=1.12.0",
  "onnxslim",
  "onnxruntime-gpu",
  "tensorrt>7.0.0,!=10.1.0",
  "tensorflow>=2.0.0",
  "paddlepaddle-gpu",
  "x2paddle",

  # Annotations
  "label-studio",
]


[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", ".github/README.md"]
